# letterboxd

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  cache.py  home.html  index.html  letterboxdashboard.html  main.py  mapa.py  pyproject.toml  requirements.txt  stats.json  stats.py  tmdb.py  tmdb_cache.csv  watched.csv  wrapped-generator.html
.github/workflows/: ci.yml  update_dashboard.yml
data/: ratings.csv  stats.json
docs/: dashboard.html  index.html  stats.json  wrapped-generator.html  wrapped_generator.html
letterboxd-main/: cache.py  config.py  tmdb.py
letterboxd-main/docs/: index.html  stats.json
letterboxd-main/src/: config.py  main.py  mapa.py
src/: build_data.py  build_site.py  cache.py  config.py  main.py  mapa.py  site_renderer.py  stats.py  stats_only.py  test_projeto.py  tmdb.py
src/letterboxd/: build_data.py  build_site.py  cache.py  config.py  main.py  mapa.py  models.py  pipeline.py  site_renderer.py  stats.py  stats_only.py
src/letterboxd/templates/: dashboard.html  index.html
src/letterboxd_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/templates/: dashboard.html  index.html  wrapped_generator.html
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_mapa.py  test_pipeline.py  test_projeto.py  test_site_renderer.py  test_stats.py  test_tmdb.py
