[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd-dashboard"
version = "0.1.0"
description = "Dashboard pessoal do Letterboxd com stats, mapa e wrapped"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
  {name = "luquitros"},
]
keywords = ["letterboxd", "dashboard", "python", "html", "tmdb", "stats"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/luquitros/letterboxd"
Repository = "https://github.com/luquitros/letterboxd"
Issues = "https://github.com/luquitros/letterboxd/issues"
Changelog = "https://github.com/luquitros/letterboxd/blob/main/CHANGELOG.md"

[project.scripts]
letterboxd = "letterboxd.main:main"
letterboxd-build-data = "letterboxd.build_data:main"
letterboxd-build-site = "letterboxd.build_site:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
letterboxd = ["templates/*.html"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-config --strict-markers -p no:cacheprovider"

[tool.coverage.run]
source = ["letterboxd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
mypy_path = "src"
files = [
  "src/letterboxd/config.py",
  "src/letterboxd/models.py",
  "src/letterboxd/cache.py",
  "src/letterboxd/pipeline.py",
  "src/letterboxd/main.py",
  "src/letterboxd/site_renderer.py",
  "src/letterboxd/build_data.py",
  "src/letterboxd/build_site.py",
  "src/letterboxd/stats.py",
]

[[tool.mypy.overrides]]
module = ["pandas", "tqdm"]
ignore_missing_imports = true
